- remove misleading comment

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -55,7 +55,6 @@ database alias = core
 postgres version = 7.1
 registration database = core
 
-# first one already imports gmServices, so ...
 # FIXME: add german-chipcard.sql
 schema = $schema$
 sql/gmidentity.sql
@@ -177,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.8  2003-05-22 12:53:41  ncq
+# Revision 1.9  2003-06-10 09:57:24  ncq
+# - remove misleading comment
+#
+# Revision 1.8  2003/05/22 12:53:41  ncq
 # - add automatic audit trail generation
 # - add options for that
 #
