- audit for up-to-date-ness

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,19 +6,19 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
 
-interactive = yes
+interactive = no
 
 description = $description$
 This will set up a standard monolithic test system for GnuMed
 that is immediately useable. It will contain patient demographics,
 clinical tables, german translations and some sample data and
 is intended for the Debian postinst script. Therefore it is
-non-interactive and contains passwords.
+non-interactive and may contain passwords.
 
 It will also have some test accounts for access to the database.
 Please refer to server/sql/gmTestAccounts.sql to learn more
@@ -34,10 +34,12 @@ services = $services$
 config
 demographics
 clinical
+documents
 $services$
 
 #----------------------------------
 # services
+#----------------------------------
 #----------------------------------
 [service config]
 name = default
@@ -45,9 +47,11 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+
 schema = $schema$
 sql/gmconfiguration.sql
 $schema$
+
 
 [service demographics]
 name = personalia
@@ -55,12 +59,19 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+
+# FIXME: add german-chipcard.sql
 schema = $schema$
 sql/gmidentity.sql
 sql/gmIdentityViews.sql
+sql/gmIdentityData.sql
+sql/gmIdentityTestData.sql
 sql/gmgis.sql
+sql/gmGisData.sql
 sql/country.specific/de/german-family_relations.sql
+sql/country.specific/au/postcodes.au.sql
 $schema$
+
 
 [service clinical]
 name = historica
@@ -68,10 +79,26 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+
+# FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
 sql/gmClinicalViews.sql
+sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
+$schema$
+
+
+[service documents]
+name = blobs
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema = $schema$
+sql/gmBlobs.sql
+sql/gmBlobsData.sql
+sql/country.specific/de/german-doc_types.sql
 $schema$
 
 #----------------------------------
@@ -111,7 +138,7 @@ name = gm-dbowner
 
 [user postgres]
 name = postgres
-#password =
+password =
 
 #----------------------------------------------
 # the following sections really shouldn't
@@ -172,7 +199,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.6  2003-05-22 12:53:41  ncq
+# Revision 1.7  2003-06-10 11:25:20  ncq
+# - audit for up-to-date-ness
+#
+# Revision 1.6  2003/05/22 12:53:41  ncq
 # - add automatic audit trail generation
 # - add options for that
 #
