- Debian wants PG version 7.3

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -45,7 +45,7 @@ $services$
 name = default
 version = 0.1
 database alias = core
-postgres version = 7.1
+postgres version = 7.3
 registration database = core
 
 schema = $schema$
@@ -57,7 +57,7 @@ $schema$
 name = personalia
 version = 0.1
 database alias = core
-postgres version = 7.1
+postgres version = 7.3
 registration database = core
 
 # FIXME: add german-chipcard.sql
@@ -77,7 +77,7 @@ $schema$
 name = historica
 version = 0.1
 database alias = core
-postgres version = 7.1
+postgres version = 7.3
 registration database = core
 
 # FIXME: add gmLab-de.sql
@@ -93,7 +93,7 @@ $schema$
 name = blobs
 version = 0.1
 database alias = core
-postgres version = 7.1
+postgres version = 7.3
 registration database = core
 schema = $schema$
 sql/gmBlobs.sql
@@ -199,7 +199,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.7  2003-06-10 11:25:20  ncq
+# Revision 1.8  2003-06-19 16:09:20  ncq
+# - Debian wants PG version 7.3
+#
+# Revision 1.7  2003/06/10 11:25:20  ncq
 # - audit for up-to-date-ness
 #
 # Revision 1.6  2003/05/22 12:53:41  ncq
