--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -95,8 +95,8 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
-port = 5432
+name = 
+port = 
 template database = template1
 super user alias = postgres
 schema = $schema$
@@ -172,7 +172,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.6  2003-05-22 12:53:41  ncq
+# Revision 1.7  2003-07-07 08:34:31  ihaywood
+# bugfixes on gmdrugs.sql for postgres 7.3
+#
+# Revision 1.6  2003/05/22 12:53:41  ncq
 # - add automatic audit trail generation
 # - add options for that
 #
