- add gmMeasurements to clinical service - add gmCrossDB_FKs to database schema

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -81,6 +81,7 @@ sql/gmclinical.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
+sql/gmMeasurements.sql
 $schema$
 
 
@@ -108,6 +109,7 @@ sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
+sql/gmCrossDB_FKs.sql
 $schema$
 
 #----------------------------------
@@ -176,7 +178,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.9  2003-06-10 09:57:24  ncq
+# Revision 1.10  2003-07-27 21:40:04  ncq
+# - add gmMeasurements to clinical service
+# - add gmCrossDB_FKs to database schema
+#
+# Revision 1.9  2003/06/10 09:57:24  ncq
 # - remove misleading comment
 #
 # Revision 1.8  2003/05/22 12:53:41  ncq
