- add gmMeasurements and gmCrossDB_FKs

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -80,6 +80,7 @@ sql/gmclinical.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
+sql/gmMeasurements.sql
 $schema$
 
 
@@ -107,6 +108,7 @@ sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
+sql/gmCrossDB_FKs.sql
 $schema$
 
 #----------------------------------
@@ -175,7 +177,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.1  2003-06-24 11:34:13  ncq
+# Revision 1.2  2003-07-27 21:45:16  ncq
+# - add gmMeasurements and gmCrossDB_FKs
+#
+# Revision 1.1  2003/06/24 11:34:13  ncq
 # - use this file for public Knoppix databases
 #
 # Revision 1.9  2003/06/10 09:57:24  ncq
