--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -73,6 +73,7 @@ schema = $schema$
 sql/gmclinical.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
+sql/gmMeasurements.sql
 $schema$
 
 #----------------------------------
@@ -89,6 +90,7 @@ sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
+sql/gmCrossDB_FKs.sql
 $schema$
 
 #----------------------------------
@@ -172,7 +174,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.7  2003-07-07 08:34:31  ihaywood
+# Revision 1.8  2003-07-27 21:45:16  ncq
+# - add gmMeasurements and gmCrossDB_FKs
+#
+# Revision 1.7  2003/07/07 08:34:31  ihaywood
 # bugfixes on gmdrugs.sql for postgres 7.3
 #
 # Revision 1.6  2003/05/22 12:53:41  ncq
