--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -83,6 +83,7 @@ sql/gmSchemaRevision.sql
 sql/gmServices.sql
 sql/gmI18N.sql
 sql/gmAudit.sql
+sql/gmCrossDB_FKs.sql
 $schema$
 
 #----------------------------------
@@ -154,7 +155,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.6  2003-05-22 12:53:41  ncq
+# Revision 1.7  2003-07-27 21:45:16  ncq
+# - add gmMeasurements and gmCrossDB_FKs
+#
+# Revision 1.6  2003/05/22 12:53:41  ncq
 # - add automatic audit trail generation
 # - add options for that
 #
