--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,7 +1,10 @@
 #Test Properties
-#Sat Jul 26 12:01:34 EST 2003
-postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
+#Tue Jul 29 08:26:55 EST 2003
+notify.id.at.interval=1
 logger=off
-test.identity.addresses.number=100
+postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
+schema.has.been.exported=true
+stress.encounters.per.identity=10
+stress.identity.count=4
+test.identity.addresses.number=10
 postcode.batch.flush.size=40
-exported=true
