--- a/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
@@ -163,7 +163,7 @@ hibernate.query.substitutions yes 'Y', no 'N'
 ### Hibernate Connection Pool ###
 #################################
 
-hibernate.connection.pool_size 1
+hibernate.connection.pool_size 10
 hibernate.statement_cache.size 25
 
 
@@ -286,7 +286,7 @@ hibernate.proxool.pool_alias pool1
 
 ## print all generated SQL to the console
 
-hibernate.show_sql false
+hibernate.show_sql true
 
 
 ## specify a JDBC isolation level
@@ -301,7 +301,7 @@ hibernate.show_sql false
 
 ## set the maximum JDBC 2 batch size (a nonzero value enables batching)
 
-hibernate.jdbc.batch_size 0
+hibernate.jdbc.batch_size 10
 
 
 ## enable use of JDBC 2 scrollable ResultSets (specifying a Dialect will cause Hibernate to use a sensible default)
@@ -326,7 +326,7 @@ hibernate.jdbc.use_streams_for_binary true
 
 ## enable outerjoin fetching (specifying a Dialect will cause Hibernate to use sensible default)
 
-#hibernate.use_outer_join false
+hibernate.use_outer_join true
 
 
 ## enable CGLIB reflection optimizer (enabled by default)
