--- a/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
@@ -286,7 +286,7 @@ hibernate.proxool.pool_alias pool1
 
 ## print all generated SQL to the console
 
-hibernate.show_sql true
+hibernate.show_sql false
 
 
 ## specify a JDBC isolation level
