Additions for prescribing

--- a/gnumed/gnumed/test-area/gmDrug/gmdrug.conf
+++ b/gnumed/gnumed/test-area/gmDrug/gmdrug.conf
@@ -29,6 +29,52 @@ $query$
 variables=name,id
 mappings=Key
 
+#-----------------------FORMULATIONS FOR PRESCRIPTION ------------------------
+[formsList1]
+type=query
+querygroup=formsList
+query=$query$
+select product.id, comment, amount, du.unit, 
+case 
+	when dr.description = 'intravenous' then 'iv'
+	when dr.description = 'intramuscular' then 'im'
+	when dr.description = 'subcutaneous' then 'sc'
+	when dr.description = 'rectal' then 'pr'
+	when dr.description = 'topical' then 'topical'
+else NULL end	
+from product, drug_units du, drug_routes dr where product.id=%s and
+du.id = id_packing_unit and dr.id = id_route
+$query$
+variables=id,free_form,amount,amount_unit,route
+mappings=ID
+
+#------------------------PACKAGE SIZES FOR PRESCRIPTION-------------------------
+[packageSize]
+type=query
+querygroup=packageSizes
+query=$query$
+select size, 0.0 from package_size where id_product = %s
+$query$
+variables=package_size,price
+mappings=ID
+
+#-----------------------PRESCRIBING RESTRICTIONS---------------------------------
+[restriction1]
+type=query
+querygroup=restriction
+query=$query$
+select 
+	case 
+		when restriction ilike '%authority%' then 't'
+	else 'f',
+	restriction
+from subsidied_products, subsidies where id_product = %s and id_subsidy = subsidies.id and 
+subsidies.name = '%s'   
+$query$
+variables=flag,text
+mappings=ID,regime
+
+
 #-----------------------Brand products for GENERIC SUBSTANCE NAME -----------------------
 [brandsForGeneric]
 type=query
