- adapt to gmDemographics*.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
@@ -56,17 +56,17 @@ postgres version = 7.1
 registration database = core
 
 # FIXME: add german-chipcard.sql
+# FIXME: add gmDemographics-Org-views.sql
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmIdentityData.sql
-sql/gmIdentityTestData.sql
-sql/gmgis.sql
-sql/gmGisData.sql
+sql/gmDemographics.sql
+sql/gmDemographics-Person-views.sql
+sql/gmDemographics-Person-data.sql
+sql/gmDemographics-Person-test_data.sql
+sql/gmDemographics-GIS-views.sql
+sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
 sql/country.specific/au/postcodes.au.sql
 $schema$
-
 
 [service clinical]
 name = historica
@@ -178,7 +178,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.10  2003-07-27 21:40:04  ncq
+# Revision 1.11  2003-08-02 13:14:03  ncq
+# - adapt to gmDemographics*.sql
+#
+# Revision 1.10  2003/07/27 21:40:04  ncq
 # - add gmMeasurements to clinical service
 # - add gmCrossDB_FKs to database schema
 #
