- adapted to gmDemographics*.sql

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -56,12 +56,12 @@ registration database = core
 
 # FIXME: add german-chipcard.sql
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmIdentityData.sql
-sql/gmIdentityTestData.sql
-sql/gmgis.sql
-sql/gmGisData.sql
+sql/gmDemographics.sql
+sql/gmDemographics-Person-views.sql
+sql/gmDemographics-Person-data.sql
+sql/gmDemographics-Person-test_data.sql
+sql/gmDemographics-GIS-views.sql
+sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
 sql/country.specific/au/postcodes.au.sql
 $schema$
@@ -177,7 +177,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.2  2003-07-27 21:45:16  ncq
+# Revision 1.3  2003-08-02 14:33:48  ncq
+# - adapted to gmDemographics*.sql
+#
+# Revision 1.2  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.1  2003/06/24 11:34:13  ncq
