--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -49,9 +49,9 @@ database alias = core
 postgres version = 7.1
 registration database = core
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmgis.sql
+sql/gmDemographics.sql
+sql/gmDemographics-Person-views.sql
+sql/gmDemographics-GIS-views.sql
 $schema$
 
 [service clinical]
@@ -163,7 +163,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.7  2003-07-27 21:45:16  ncq
+# Revision 1.8  2003-08-02 14:33:48  ncq
+# - adapted to gmDemographics*.sql
+#
+# Revision 1.7  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.6  2003/05/22 12:53:41  ncq
