--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-DE.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-DE.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -54,12 +54,12 @@ database alias = core
 postgres version = 7.1
 registration database = core
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmIdentityData.sql
-sql/gmIdentityTestData.sql
-sql/gmgis.sql
-sql/gmGisData.sql
+sql/gmDemographics.sql
+sql/gmDemographics-Person-views.sql
+sql/gmDemographics-Person-data.sql
+sql/gmDemographics-Person-test_data.sql
+sql/gmDemographics-GIS-views.sql
+sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
 $schema$
 
@@ -175,7 +175,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-DE.conf,v $
-# Revision 1.7  2003-07-27 21:45:16  ncq
+# Revision 1.8  2003-08-02 14:33:48  ncq
+# - adapted to gmDemographics*.sql
+#
+# Revision 1.7  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.6  2003/05/22 12:53:41  ncq
