--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -67,8 +67,8 @@ name = personalia
 version = 0.1
 
 schema = $schema$
-../sql/gmidentity.sql
-../sql/gmgis.sql
+../sql/gmDemographics.sql
+../sql/...
 $schema$
 
 postgres version = 7.1
@@ -241,7 +241,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard.conf.template,v $
-# Revision 1.8  2003-07-27 21:45:16  ncq
+# Revision 1.9  2003-08-02 14:33:48  ncq
+# - adapted to gmDemographics*.sql
+#
+# Revision 1.8  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.7  2003/05/26 13:59:12  ncq
