--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -62,12 +62,12 @@ registration database = core
 
 # FIXME: add german-chipcard.sql
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmIdentityData.sql
-sql/gmIdentityTestData.sql
-sql/gmgis.sql
-sql/gmGisData.sql
+sql/gmDemographics.sql
+sql/gmDemographics-Person-views.sql
+sql/gmDemographics-Person-data.sql
+sql/gmDemographics-Person-test_data.sql
+sql/gmDemographics-GIS-views.sql
+sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
 sql/country.specific/au/postcodes.au.sql
 $schema$
@@ -201,7 +201,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.9  2003-07-27 21:45:16  ncq
+# Revision 1.10  2003-08-02 14:33:48  ncq
+# - adapted to gmDemographics*.sql
+#
+# Revision 1.9  2003/07/27 21:45:16  ncq
 # - add gmMeasurements and gmCrossDB_FKs
 #
 # Revision 1.8  2003/06/19 16:09:20  ncq
