- import measurements before views now

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.11 $
+version = $Revision: 1.12 $
 
 #----------------------------------
 [installation]
@@ -78,10 +78,10 @@ registration database = core
 # FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
+sql/gmMeasurements.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
-sql/gmMeasurements.sql
 $schema$
 
 
@@ -178,7 +178,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.11  2003-08-02 13:14:03  ncq
+# Revision 1.12  2003-08-03 14:04:10  ncq
+# - import measurements before views now
+#
+# Revision 1.11  2003/08/02 13:14:03  ncq
 # - adapt to gmDemographics*.sql
 #
 # Revision 1.10  2003/07/27 21:40:04  ncq
