--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -77,10 +77,10 @@ registration database = core
 # FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
+sql/gmMeasurements.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
-sql/gmMeasurements.sql
 $schema$
 
 
@@ -177,7 +177,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.3  2003-08-02 14:33:48  ncq
+# Revision 1.4  2003-08-03 14:04:10  ncq
+# - import measurements before views now
+#
+# Revision 1.3  2003/08/02 14:33:48  ncq
 # - adapted to gmDemographics*.sql
 #
 # Revision 1.2  2003/07/27 21:45:16  ncq
