--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard-AU.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-standard-AU.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -71,9 +71,9 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
+sql/gmMeasurements.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
-sql/gmMeasurements.sql
 $schema$
 
 #----------------------------------
@@ -174,7 +174,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard-AU.conf,v $
-# Revision 1.9  2003-08-02 14:33:48  ncq
+# Revision 1.10  2003-08-03 14:04:10  ncq
+# - import measurements before views now
+#
+# Revision 1.9  2003/08/02 14:33:48  ncq
 # - adapted to gmDemographics*.sql
 #
 # Revision 1.8  2003/07/27 21:45:16  ncq
