--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
@@ -83,10 +83,10 @@ registration database = core
 # FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
+sql/gmMeasurements.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/german-gmclinical.sql
-sql/gmMeasurements.sql
 $schema$
 
 
@@ -201,7 +201,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.10  2003-08-02 14:33:48  ncq
+# Revision 1.11  2003-08-03 14:04:10  ncq
+# - import measurements before views now
+#
+# Revision 1.10  2003/08/02 14:33:48  ncq
 # - adapted to gmDemographics*.sql
 #
 # Revision 1.9  2003/07/27 21:45:16  ncq
