--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -62,8 +62,8 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmclinical.sql
-sql/gmClinicalViews.sql
 sql/gmMeasurements.sql
+sql/gmClinicalViews.sql
 $schema$
 
 #----------------------------------
@@ -163,7 +163,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.8  2003-08-02 14:33:48  ncq
+# Revision 1.9  2003-08-03 14:04:10  ncq
+# - import measurements before views now
+#
+# Revision 1.8  2003/08/02 14:33:48  ncq
 # - adapted to gmDemographics*.sql
 #
 # Revision 1.7  2003/07/27 21:45:16  ncq
