*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,8 +1,8 @@
 #Test Properties
-#Sun Aug 03 09:19:28 EST 2003
+#Tue Aug 05 12:01:23 EST 2003
 notify.id.at.interval=1
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
-logger=off
+logger=on
 schema.has.been.exported=true
 stress.encounters.per.identity=10
 test.identity.addresses.number=10
