- adapt to new names for sql files

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -55,8 +55,6 @@ database alias = core
 postgres version = 7.1
 registration database = core
 
-# FIXME: add german-chipcard.sql
-# FIXME: add gmDemographics-Org-views.sql
 schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
@@ -64,7 +62,10 @@ sql/gmDemographics-Person-data.sql
 sql/gmDemographics-Person-test_data.sql
 sql/gmDemographics-GIS-views.sql
 sql/gmDemographics-GIS-data.sql
-sql/country.specific/de/german-family_relations.sql
+sql/gmDemographics-Org-views.sql
+sql/country.specific/de/gmDemographics.de.sql
+sql/country.specific/de/gmDemographics-Data.de.sql
+sql/country.specific/au/gmDemographics.au.sql
 sql/country.specific/au/postcodes.au.sql
 $schema$
 
@@ -75,15 +76,14 @@ database alias = core
 postgres version = 7.1
 registration database = core
 
-# FIXME: add gmLab-de.sql
 schema = $schema$
 sql/gmclinical.sql
 sql/gmMeasurements.sql
 sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
-sql/country.specific/de/german-gmclinical.sql
+sql/country.specific/de/gmClinical.de.sql
+sql/country.specific/de/gmClinical-Data.de.sql
 $schema$
-
 
 [service documents]
 name = blobs
@@ -94,7 +94,7 @@ registration database = core
 schema = $schema$
 sql/gmBlobs.sql
 sql/gmBlobsData.sql
-sql/country.specific/de/german-doc_types.sql
+sql/country.specific/de/gmBlobs-Data.de.sql
 $schema$
 
 #----------------------------------
@@ -178,7 +178,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.12  2003-08-03 14:04:10  ncq
+# Revision 1.13  2003-08-05 09:15:23  ncq
+# - adapt to new names for sql files
+#
+# Revision 1.12  2003/08/03 14:04:10  ncq
 # - import measurements before views now
 #
 # Revision 1.11  2003/08/02 13:14:03  ncq
