*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -54,9 +54,7 @@ occupation=Occupation
 
 #the work phone number
 phone_work=Phone-work
-
-#the mobile number
-mobile=Mobile
+mobile=mobile
 
 #the home phone number
 home=home
@@ -186,3 +184,5 @@ pension=pension
 current_medication=current medication
 
 work=work
+
+unknown=unknown
