--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -2,8 +2,8 @@
 #Tue Aug 05 12:01:23 EST 2003
 notify.id.at.interval=1
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
-logger=off
-schema.has.been.exported=false
+logger=on
+schema.has.been.exported=true
 stress.encounters.per.identity=10
 test.identity.addresses.number=10
 stress.identity.count=4
