*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/hibernate.properties
@@ -30,7 +30,7 @@ hibernate.cascade.drop
 
 hibernate.dialect net.sf.hibernate.dialect.PostgreSQLDialect
 hibernate.connection.driver_class org.postgresql.Driver
-hibernate.connection.url jdbc:postgresql:template1
+hibernate.connection.url jdbc:postgresql:template1:public
 hibernate.connection.username sjtan
 hibernate.connection.password password
 hibernate.query.substitutions yes 'Y', no 'N'
