--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,10 +1,10 @@
 #Test Properties
-#Tue Aug 05 12:01:23 EST 2003
+#Mon Aug 11 14:04:49 EST 2003
 notify.id.at.interval=1
+logger=off
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
-logger=on
 schema.has.been.exported=true
 stress.encounters.per.identity=10
-test.identity.addresses.number=10
 stress.identity.count=4
+test.identity.addresses.number=10
 postcode.batch.flush.size=40
