- add service "reference"

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.13 $
+version = $Revision: 1.14 $
 
 #----------------------------------
 [installation]
@@ -33,6 +33,7 @@ config
 demographics
 clinical
 documents
+reference
 $services$
 
 #----------------------------------
@@ -54,7 +55,6 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
-
 schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
@@ -75,7 +75,6 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
-
 schema = $schema$
 sql/gmclinical.sql
 sql/gmMeasurements.sql
@@ -95,6 +94,16 @@ schema = $schema$
 sql/gmBlobs.sql
 sql/gmBlobsData.sql
 sql/country.specific/de/gmBlobs-Data.de.sql
+$schema$
+
+[service reference]
+name = reference
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema = $schema$
+sql/gmReference.sql
 $schema$
 
 #----------------------------------
@@ -178,7 +187,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.13  2003-08-05 09:15:23  ncq
+# Revision 1.14  2003-08-13 14:18:11  ncq
+# - add service "reference"
+#
+# Revision 1.13  2003/08/05 09:15:23  ncq
 # - adapt to new names for sql files
 #
 # Revision 1.12  2003/08/03 14:04:10  ncq
