*** empty log message ***

--- a/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/SummaryTerms.properties
@@ -188,3 +188,18 @@ work=work
 unknown=unknown
 
 medical_record=Medical Record
+
+#the past  tense verb
+born=born
+#presence
+positive=positive
+#absence
+negative=negative
+#a alphabetic type
+A=A
+#a alphabetic type
+B=B
+#blood group
+AB=AB
+#blood group
+O=O
