--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -1,10 +1,10 @@
 #Test Properties
-#Mon Aug 11 14:04:49 EST 2003
+#Thu Aug 14 00:58:25 EST 2003
 notify.id.at.interval=1
-logger=off
 postcode.csv.path=../../../server/sql/country.specific/au/postcodes.au.csv
+logger=on
 schema.has.been.exported=true
 stress.encounters.per.identity=10
-stress.identity.count=4
 test.identity.addresses.number=10
+stress.identity.count=4
 postcode.batch.flush.size=40
