not yet successful multi-level logging.

--- a/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
+++ b/gnumed/gnumed/test-area/java/gnmed/gnmed-test.properties
@@ -8,3 +8,6 @@ stress.encounters.per.identity=10
 test.identity.addresses.number=10
 stress.identity.count=4
 postcode.batch.flush.size=40
+
+#levels can be finest, finer, fine, warning, info, all
+logger.level=finest
